--- a/src/styles/tab.scss
+++ b/src/styles/tab.scss
@@ -11,11 +11,22 @@ html,body{
   }
   .Like-winter{
     //
+    .el-tabs__item.is-active {
+      color: #fff!important;
+    }
     .el-tabs__nav{
-      margin-left: 20px!important;
+      margin-left: 5px!important;
+      .el-tabs__active-bar{
+        height: 2px!important;
+      }
       .el-tabs__item{
-        font-size: 12px!important;
+        height: 36px!important;
+        line-height: 36px!important;
+        font-size: 14px!important;
         padding: 0 8px!important;
+      }
+      :hover{
+        color: #fff!important;
       }
     }
   }
