冬防战报页面部分修改样式

--- a/src/styles/tab.scss
+++ b/src/styles/tab.scss
@@ -9,6 +9,9 @@ html,body{
       }
     }
   }
+  .el-tabs__header{
+    margin: 0!important;
+  }
   .Like-winter{
     //
     .el-tabs__item.is-active {
