--- a/src/styles/tabandprogres.scss
+++ b/src/styles/tabandprogres.scss
@@ -21,8 +21,8 @@ html,body{
     }
     //轮播样式
     .el-carousel{
-      margin-left: 30px!important;
-      width: 300px!important;
+      margin-left: 30px;
+      width: 300px;
     }
     .el-carousel__item{
       height: auto!important;
@@ -34,7 +34,7 @@ html,body{
     }
     //表格样式
     .el-table{
-      width: 426px!important;
+      width: 426px;
     }
     .el-table .cell{
       padding: 0!important;
