map弹出框优化

--- a/src/styles/baidumap.scss
+++ b/src/styles/baidumap.scss
@@ -3,8 +3,9 @@
   padding-left: 15px;
   line-height: 32px;
   height: 32px;
-  background-color: #1080cc!important;
-  color: #fff;
+  background-color: white;
+  color:#333333 ;
+  font-family:'Microsoft YaHei'
 }
 .BMapLib_SearchInfoWindow .BMapLib_bubble_tools div {
   background-color: rgba(0, 0, 0, 0);
