map弹出框调整

--- a/src/styles/baidumap.scss
+++ b/src/styles/baidumap.scss
@@ -7,6 +7,9 @@
   color:#333333 ;
   font-family:'Microsoft YaHei'
 }
+.BMapLib_SearchInfoWindow{
+  border-radius:2px;
+}
 .BMapLib_SearchInfoWindow .BMapLib_bubble_tools div {
   background-color: rgba(0, 0, 0, 0);
 }
