--- a/src/styles/baidumap.scss
+++ b/src/styles/baidumap.scss
@@ -14,6 +14,15 @@
   background: #fff!important;
   color: #333!important;
 }
+.BMapLib_SearchInfoWindow{
+  border:none!important;
+  box-shadow: 0 0 10px #666;
+  border-radius: 2px;
+}
+.BMapLib_bubble_top{
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
 .BMapLib_SearchInfoWindow .BMapLib_sendToPhone {
   background: none;
 }
